--- a/public/style.css
+++ b/public/style.css
@@ -131,7 +131,8 @@ li {
 }
 
 .showcase-form input[type='text'],
-.showcase-form input[type='password'] {
+.showcase-form input[type='password'],
+.showcase-form input[type='email'] {
   border: 0;
   width: 100%;
   padding: 3px;
@@ -215,6 +216,10 @@ li {
   font-size: 14px;
 }
 
+.red {
+  background-color: #e54317;
+}
+
 /* Animation */
 @keyframes slideInFromReft {
   0% {
@@ -223,5 +228,27 @@ li {
 
   100% {
     transform: translateX(0);
+  }
+}
+
+@media only screen and (max-width: 1020px) {
+  .card {
+    width: 500px;
+  }
+
+  #imageField {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    height: 200px;
+  }
+
+  .red {
+    width: 100%;
+    margin: auto;
+    font-size: 0.8em;
+  }
+
+  nav {
+    width: 500px;
   }
 }
